--- a/package.json
+++ b/package.json
@@ -14,19 +14,26 @@
     "react-dom": "^17.0.2",
     "react-fetch-hook": "^1.8.5",
     "react-icons": "^4.3.1",
+    "react-intl": "^5.21.1",
     "react-is": "^17.0.2",
     "react-popper-tooltip": "^4.3.1",
     "react-query": "^3.32.1",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "15.0.0",
-    "@types/react": "17.0.4",
-    "@types/react-dom": "17.0.3",
-    "@types/styled-components": "5.1.9",
-    "babel-plugin-styled-components": "^1.12.0",
+    "@types/node": "16.11.7",
+    "@types/react": "17.0.34",
+    "@types/react-dom": "17.0.11",
+    "@types/styled-components": "5.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "babel-plugin-styled-components": "^1.13.3",
     "eslint": "<8.0.0",
     "eslint-config-next": "12.0.3",
-    "typescript": "4.2.4"
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sort-destructure-keys": "^1.4.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "typescript": "4.4.4"
   }
 }
