--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,9 @@
       "@constants/*": ["constants/*"],
       "@contexts/*": ["contexts/*"],
       "@hooks/*": ["hooks/*"],
-      "@utils/*": ["utils/*"],
+      "@utils/*": ["utils/*"]
     },
+    "incremental": true
   },
   "exclude": ["node_modules"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
