--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "dev": "next",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -27,6 +29,7 @@
     "@types/styled-components": "5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "babel-plugin-styled-components": "^1.13.3",
+    "cypress": "^9.0.0",
     "eslint": "<8.0.0",
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
@@ -34,6 +37,7 @@
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "start-server-and-test": "^1.14.0",
     "typescript": "4.4.4"
   }
 }
